--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         </div>
     
         <div class="result"></div>
+        <div class="score">
+            <div class="player">0</div>
+            <div class="computer">0</div>
+        </div>
     </div>
     
 </body>
