--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
     
         <div class="result"></div>
         <div class="score">
+            Player: 
             <div class="player">0</div>
+            Computer: 
             <div class="computer">0</div>
         </div>
+        <div class="final-result"></div>
     </div>
     
 </body>
